CoCRM/myproject/mdapioutput/objects/Spiritual_Milestones__c.object
<CustomObject>
    <label>Spiritual Milestone</label>
    <nameField>
        <displayFormat>Milest# {0}</displayFormat>
        <label>Milestone Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spiritual Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Associated_Activity__c</fullName>
        <label>Associated Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tefillin</fullName>
                </value>
                <value>
                    <fullName>Mezuza</fullName>
                </value>
                <value>
                    <fullName>Shabbat Candles</fullName>
                </value>
                <value>
                    <fullName>Attended a Shiur</fullName>
                </value>
                <value>
                    <fullName>Attended a Shabbat Meal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Birthright</fullName>
                </value>
                <value>
                    <fullName>Sinai Scholars</fullName>
                </value>
                <value>
                    <fullName>One-on-one Encounters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Spiritual Milestones</relationshipLabel>
        <relationshipName>Spiritual_Milestones2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>